<?xml version="1.0"?>
<package format="3">
  <name>lanelets_to_path</name>
  <version>0.0.0</version>
  <description>The roadmap package</description>


  <maintainer email="r2c1@todo.todo">r2c1</maintainer>

  <license>TODO</license>

  <depend>rclcpp</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>nav_msgs</depend>

  <build_depend>ros_tools</build_depend>
  <depend>route_handler</depend>

  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>autoware_planning_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
