<?xml version="1.0"?>
<package format="3">
  <name>roadmap</name>
  <version>0.0.0</version>
  <description>The roadmap package</description>

 
  <maintainer email="r2c1@todo.todo">r2c1</maintainer>

  <license>TODO</license>

  <depend>rclcpp</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>asr_rapidxml</depend>
  <depend>roadmap_msgs</depend>
  <depend>ros_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
